--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,20 +16,20 @@ jobs:
       uses: actions/checkout@v2
     - name: Build_Linux
       working-directory: ./
-      run: go build -v -o wakie-${{ github.event.release.tag_name }}-Linux-x64
+      run: go build -v -o wakie-Linux-x64
     - name: Build_Windows
       working-directory: ./
-      run: GOOS=windows GOARCH=amd64 go build -v -o wakie-${{ github.event.release.tag_name }}-Win-x64.exe
+      run: GOOS=windows GOARCH=amd64 go build -v -o wakie-Win-x64.exe
     - name: Create Archive
       working-directory: ./
       run: |
-        tar -cvzf wakie-${{ github.event.release.tag_name }}-Linux-x64.tar.gz wakie-Linux-x64 wakie.sample.yaml
-        zip wakie-${{ github.event.release.tag_name }}-Win-x64 wakie-Win-x64.exe wakie.sample.yaml 
+        tar -cvzf wakie-Linux-x64.tar.gz wakie-Linux-x64 wakie.sample.yaml
+        zip wakie-Win-x64 wakie-Win-x64.exe wakie.sample.yaml 
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          wakie-${{ github.event.release.tag_name }}-Linux-x64.tar.gz
-          wakie-${{ github.event.release.tag_name }}-Win-x64.zip
+          wakie-Linux-x64.tar.gz
+          wakie-Win-x64.zip
         draft: false
         prerelease: false
