--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,11 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: 1.x
+        check-latest: true
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Build_Linux
       working-directory: ./
       run: go build -v -o wakie-Linux-x64
